# SO-2-PROJEKT

./: CMakeLists.txt  Fork.cpp  Fork.h  Helper.cpp  Helper.h  Philosopher.cpp  Philosopher.h  Program.cpp  Program.h  README.md  Semaphore.cpp  Semaphore.h  main.cpp
